--- a/Frontend/Web/public/index.html
+++ b/Frontend/Web/public/index.html
@@ -3,7 +3,7 @@
         <!--CSS de la aplicacion-->
         <link rel="stylesheet" href="inmo.css">
     </head>
-    <body>
+    <body style="padding: 0; margin: 0;">
         <!--Aplicacion-->
         <div id="contenedor"></div>
         <!--Codigo-->
