--- a/Frontend/Web/public/index.html
+++ b/Frontend/Web/public/index.html
@@ -2,8 +2,9 @@
     <head>
         <!--CSS de la aplicacion-->
         <link rel="stylesheet" href="inmo.css">
+        <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500" rel="stylesheet">
     </head>
-    <body>
+    <body style="padding: 0; margin: 0;">
         <!--Aplicacion-->
         <div id="contenedor"></div>
         <!--Codigo-->
