--- a/Frontend/Web-construccion/public/index.html
+++ b/Frontend/Web-construccion/public/index.html
@@ -2,6 +2,7 @@
     <head>
         <!--CSS de la aplicacion-->
         <link rel="stylesheet" href="inmo.css">
+        <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=0.6">
         <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500" rel="stylesheet">
         <title>Inmo</title>
