--- a/Frontend/Web-construccion/public/index.html
+++ b/Frontend/Web-construccion/public/index.html
@@ -1,3 +1,19 @@
+<!-- 
+  _________
+ /_  ___   \
+/@ \/@  \   \
+\__/\___/   /
+ \_\/______/
+ /     /\\\\\ 
+|     |\\\\\\ 
+ \      \\\\\\\ 
+   \______/\\\\\
+    _||_||_
+
+ Génova, te quiero <3.
+-->
+
+<!DOCTYPE html>
 <html>
     <head>
         <!--CSS de la aplicacion-->
